udate coplenet_run.py

--- a/config/config.cfg
+++ b/config/config.cfg
@@ -19,9 +19,22 @@ Pad_output_size = [1, 32, 32]
 Pad_ceil_mode   = True
 Pad_inverse     = True
 
+[network]
+# this section gives parameters for network
+
+# type of network
+net_type = COPLENet
+
+# number of class, required for segmentation task
+class_num     = 2
+in_chns       = 1
+bilinear      = True
+feature_chns  = [32, 64, 128, 256, 512]
+dropout       = [0.0, 0.0, 0.3, 0.4, 0.5]
+
 [testing]
 # device name" cuda:n or cpu
-device_name = cuda:1
+device_name = cuda:0
 
 checkpoint_name  = coplenet_data/coplenet_pretrain.pt
 output_dir       = coplenet_data/result
