upgrade pymic to 0.2.3

--- a/config/config.cfg
+++ b/config/config.cfg
@@ -2,6 +2,7 @@
 # tensor type (float or double)
 tensor_type = float
 
+task_type   = seg
 # input image directory
 root_dir  = coplenet_data/image
 
@@ -32,17 +33,20 @@ bilinear      = True
 feature_chns  = [32, 64, 128, 256, 512]
 dropout       = [0.0, 0.0, 0.3, 0.4, 0.5]
 
-[testing]
-# device name" cuda:n or cpu
-device_name = cuda:0
+[training]
+gpus = [0]
 
-checkpoint_name  = coplenet_data/coplenet_pretrain.pt
-output_dir       = coplenet_data/result
-evaluation_mode  = True
+[testing]
+gpus = [0]
+
+ckpt_mode       = 2
+ckpt_name       = coplenet_data/coplenet_pretrain.pt
+output_dir      = coplenet_data/result
+evaluation_mode = True
 test_time_dropout = False
 
-mini_batch_size  = 2
-mini_patch_input_shape  = [20, None, None]
-mini_patch_output_shape = [20, None, None]
-mini_patch_stride = [20, None, None]
-
+# use test time augmentation
+tta_mode              = 0
+sliding_window_enable = True
+sliding_window_size   = [20, None, None]
+sliding_window_stride = [20, None, None]
